force-app/main/default/objects/Discount__c/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrderItemsCondition</fullName>
                <label>Order Have Minimum 5 Items</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>