force-app/main/default/objects/Discount__c/fields/Condition_Logic_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic_Field__c</fullName>
    <label>Condition Logic Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Order.Products_Amount</fullName>
            </value>
            <value>
                <fullName>Order.Products_Total_Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>