force-app/main/default/objects/Discount__c/fields/Condition_Logic_Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic_Numeric_Value__c</fullName>
    <label>Condition Logic Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>