force-app/main/default/objects/Discount__c/fields/Condition_Logic_Operator__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic_Operator__c</fullName>
    <label>Condition Logic Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>