force-app/main/default/objects/Discount__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>Type of Discount</description>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
                <default>true</default>
                <label>Recurring</label>
            </value>
            <value>
                <fullName>Time-Bound</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>