force-app/main/default/objects/Discount__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Discount Active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>