force-app/main/default/objects/Discount__c/fields/Recurring_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Date_End__c</fullName>
    <label>Recurring Date End</label>
    <type>DateTime</type>
</CustomField>