force-app/main/default/objects/Discount__c/fields/Recurring_Date_Repeat_By__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Date_Repeat_By__c</fullName>
    <label>Recurring Date Repeat By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day of the Week</fullName>
            </value>
            <value>
                <fullName>Day of the Month</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Time of Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>