force-app/main/default/objects/Discount__c/fields/Recurring_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Date_Start__c</fullName>
    <label>Recurring Date Start</label>
    <type>DateTime</type>
</CustomField>