force-app/main/default/objects/Discount__c/fields/Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Times_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>