force-app/main/default/objects/Discount__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Times_Used__c</columns>
    <columns>Value_Type__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Discount_Value__c</columns>
    <filterScope>Mine</filterScope>
    <label>Default</label>
</ListView>